# test_light

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  blinkExternalLED.pru1_1.c  blinkr30.pru1_1.c  registers.h
src/: asm.S  main.rs  simple.c
