[package]
name = "test_light"
version = "0.1.0"
edition = "2021"

# Create as a standard library instead of a standalone executable (we don't know how to handle _libc stuff
[lib]
name = "test_light"
crate-type = ["staticlib"]  


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"

